--- a/app/src/master.sass
+++ b/app/src/master.sass
@@ -7,6 +7,7 @@
 body
 	font-family: roboto !important
 	-webkit-font-smoothing: antialiased !important
+	-moz-font-smoothing: antialiased !important
 	overflow-y: scroll
 	background-color: #E8E8E8
 
